# mhf-launcher

./: .gitignore  LICENSE  README.md  index.html  messagelist.json  package-lock.json  package.json  serverlist.json  tailwind.config.js  vite.config.js
locale/: en.ftl  jp.ftl
public/fonts/: font-info.txt
src/: Main.vue  SettingsList.vue  common.js  fluent.js  main.js  store.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  endpoint.rs  main.rs  patcher.rs  server.rs  settings.rs  store.rs  user.rs
src/classic/: Character.vue  Characters.vue  Launcher.vue  Login.vue  MessageList.vue  Patcher.vue  Settings.vue  style.css
src/modern/: Characters.vue  Launcher.vue  Login.vue  Patcher.vue  Settings.vue
src/settings/: SettingsCheckbox.vue  SettingsItem.vue  SettingsList.vue
