[package]
name = "app"
version = "0.1.0"
description = "MHF Launcher"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json"] }
keyring = "2"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7", features = [] }
tauri = { version = "1.5", features = ["api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# mhf-iel = { git = "https://github.com/rockisch/mhf-iel.git", rev = "9c0181f7c5fa24219ab5a9040cd079ecdbc1cb4a" }
mhf-iel = { path = "../../mhf-iel" }
# fluent-fallback = "0.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
